nuevos sitios web

--- a/ansible/roles/config_apache/templates/zara.conf.j2
+++ b/ansible/roles/config_apache/templates/zara.conf.j2
@@ -2,4 +2,8 @@
         ServerName www.{{ zara.name }}.{{ dominioBusqueda }}
         ServerAlias {{ zara.name }}.{{ dominioBusqueda }}
         DocumentRoot "{{ zaraDirectory.path }}"
+
+        <IfModule mod_dir.c>
+        		DirectoryIndex {{ zara.name }}.html index.html
+        </IfModule>
 </VirtualHost>
