--- a/ansible/roles/config_dns/templates/named.conf.local.j2
+++ b/ansible/roles/config_dns/templates/named.conf.local.j2
@@ -2,3 +2,8 @@ zone "{{ dominioBusqueda }}" {
      type master;
      file "/etc/bind/db.{{ dominioBusqueda }}";
 };
+
+zone "1.168.192.in-addr.arpa" {
+	 type master;
+	 file "/etc/bind/db.192.168.1";  
+};
