--- a/ansible/roles/config_dns/templates/db.test.j2
+++ b/ansible/roles/config_dns/templates/db.test.j2
@@ -23,6 +23,8 @@ $TTL	86400
 www.{{ zara.name }}				IN    	CNAME 	{{ ansible_facts.hostname }}
 {{ mercadona.name }}					IN    	CNAME 	{{ ansible_facts.hostname }}
 www.{{ mercadona.name }}				IN    	CNAME 	{{ ansible_facts.hostname }}
+{{ dominioBusqueda }}			IN 				CNAME	{{ ansible_facts.hostname }}
+{{ ansible_facts.hostname }}.{{ dominioBusqueda }}			IN 				CNAME	{{ ansible_facts.hostname }}
 
 ;servidor de correo
 @								IN    	MX	10		{{ ansible_facts.hostname }}
