--- a/ansible/roles/config_dns/templates/named.conf.local.j2
+++ b/ansible/roles/config_dns/templates/named.conf.local.j2
@@ -1,6 +1,6 @@
 zone "{{ dominioBusqueda }}" {
      type master;
      file "/etc/bind/db.{{ dominioBusqueda }}";
-     allow-transfer { 10.33.10.100; };
+     allow-transfer { {{ dns2 }}; };
 };
 
